--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pod": "cd ios && pod install --repo-update && cd .."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.81.4",
